fixed navbar gaps in certain pages

--- a/app/assets/stylesheets/components/_navbar.scss
+++ b/app/assets/stylesheets/components/_navbar.scss
@@ -64,5 +64,5 @@ a.nav-link {
 }
 
 .nav-item-login {
-margin-top: 65px;
+// margin-top: 65px;
 }
